// Vitest Snapshot v1

exports[`Avatar > Avatar adjustVue demo works fine 1`] = `
<div
  class="demo-avatar"
  data-v-f47fb568=""
>
  <div
    class="t-avatar t-avatar--circle"
    data-v-f47fb568=""
  >
    <span>
      
      王
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle"
    data-v-f47fb568=""
  >
    <span>
      
      王亿
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle"
    data-v-f47fb568=""
  >
    <span>
      
      王亿亿
      
    </span>
  </div>
</div>
`;

exports[`Avatar > Avatar baseVue demo works fine 1`] = `
<div
  class="demo-avatar"
  data-v-32d02e64=""
>
  <div
    class="t-avatar t-avatar--circle"
    data-v-32d02e64=""
  >
    <img
      alt=""
      src="https://tdesign.gtimg.com/site/avatar.jpg"
    />
  </div>
  <div
    class="t-avatar t-avatar--circle"
    data-v-32d02e64=""
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
    data-v-32d02e64=""
  >
    
    <svg
      class="t-icon t-icon-user"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
    data-v-32d02e64=""
  >
    
    
    <svg
      class="t-icon t-icon-user"
      data-v-32d02e64=""
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
    
  </div>
</div>
`;

exports[`Avatar > Avatar groupCascadingVue demo works fine 1`] = `
<div
  class="demo-avatar"
  data-v-6b9684b6=""
>
  <div
    class="demo-avatar-block"
    data-v-6b9684b6=""
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
      data-v-6b9684b6=""
    >
      
      
      <div
        class="t-avatar t-avatar--circle"
        data-v-6b9684b6=""
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
        data-v-6b9684b6=""
      >
        <span>
          
          W
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle t-avatar__icon"
        data-v-6b9684b6=""
      >
        
        <svg
          class="t-icon t-icon-user"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
        
      </div>
      
      
    </div>
  </div>
  <div
    class="demo-avatar-block"
    data-v-6b9684b6=""
  >
    <div
      class="t-avatar-group t-avatar--offset-left"
      data-v-6b9684b6=""
    >
      
      
      <div
        class="t-avatar t-avatar--circle"
        data-v-6b9684b6=""
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
        data-v-6b9684b6=""
      >
        <span>
          
          W
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle t-avatar__icon"
        data-v-6b9684b6=""
      >
        
        <svg
          class="t-icon t-icon-user"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
        
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`Avatar > Avatar groupMaxVue demo works fine 1`] = `
<div
  class="demo-avatar"
  data-v-19cbd02e=""
>
  <div
    class="demo-avatar-block"
    data-v-19cbd02e=""
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
      data-v-19cbd02e=""
    >
      
      
      
      <div
        class="t-avatar t-avatar--circle"
        data-v-19cbd02e=""
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
        data-v-19cbd02e=""
      >
        <span>
          
          Avatar
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        <span>
          
          +1
          
        </span>
      </div>
      
      
      
    </div>
  </div>
  <div
    class="demo-avatar-block"
    data-v-19cbd02e=""
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
      data-v-19cbd02e=""
    >
      
      
      
      <div
        class="t-avatar t-avatar--circle"
        data-v-19cbd02e=""
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
        data-v-19cbd02e=""
      >
        <span>
          
          Avatar
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        
        <svg
          class="t-icon t-icon-ellipsis"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <span>
          
          
          
        </span>
        
      </div>
      
      
      
    </div>
  </div>
  <div
    class="demo-avatar-block"
    data-v-19cbd02e=""
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
      data-v-19cbd02e=""
    >
      
      
      
      <div
        class="t-avatar t-avatar--circle"
        data-v-19cbd02e=""
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
        data-v-19cbd02e=""
      >
        <span>
          
          Avatar
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        <span>
          
          
          
        </span>
      </div>
      
      
      
    </div>
  </div>
</div>
`;

exports[`Avatar > Avatar groupVue demo works fine 1`] = `
<div
  class="demo-avatar"
  data-v-02e54e52=""
>
  <div
    class="demo-avatar-block"
    data-v-02e54e52=""
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
      data-v-02e54e52=""
    >
      
      
      <div
        class="t-avatar t-avatar--circle"
        data-v-02e54e52=""
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
        data-v-02e54e52=""
      >
        <span>
          
          W
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle t-avatar__icon"
        data-v-02e54e52=""
      >
        
        <svg
          class="t-icon t-icon-user"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
        
      </div>
      
      
    </div>
  </div>
  <div
    class="demo-avatar-block"
    data-v-02e54e52=""
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
      data-v-02e54e52=""
    >
      
      
      <div
        class="t-avatar t-avatar--circle"
        data-v-02e54e52=""
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
        data-v-02e54e52=""
      >
        <span>
          
          W
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle t-avatar__icon"
        data-v-02e54e52=""
      >
        
        <svg
          class="t-icon t-icon-user"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
        
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`Avatar > Avatar shapeVue demo works fine 1`] = `
<div
  class="demo-avatar"
  data-v-0cd77318=""
>
  <div
    class="t-avatar t-avatar--circle"
    data-v-0cd77318=""
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--round"
    data-v-0cd77318=""
  >
    <span>
      
       W 
      
    </span>
  </div>
</div>
`;

exports[`Avatar > Avatar sizeVue demo works fine 1`] = `
<div
  class="demo-avatar"
  data-v-7fafa9fe=""
>
  <div
    class="demo-avatar-block"
    data-v-7fafa9fe=""
  >
    <div
      class="t-avatar t-avatar--circle"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
  </div>
  <div
    class="demo-avatar-block"
    data-v-7fafa9fe=""
  >
    <div
      class="t-avatar t-avatar--round"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--round"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--round"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--round"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
  </div>
</div>
`;
